--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<!--
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -85,4 +85,4 @@
     <script type="text/javascript" src="app/assets/javascripts/application.js"></script>
 
 </body>
-</html>
+</html> -->
