--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,6 +1,2 @@
-<h1 class="page-header">Artists Matching <%= params[:album_name] %></h1>
-<ul>
- <% @albums.each do |album| %>
-   <li><%= album.name %> | <%= link_to "Show", album_path(album.id) %></li>
- <% end %>
-</ul>
+<h1>Albums#index</h1>
+<p>Find me in app/views/albums/index.html.erb</p>
