--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
-<h1 class="page-header">Albums Matching <%= params[:album_name] %></h1>
-<ul>
- <% @albums.each do |album| %>
-   <li><%= album.name %> | <%= link_to "Show", album_path(album.id) %></li>
- <% end %>
-</ul>
+<h1 class="page-header">Spotify Demo</h1>
+<%= form_tag albums_path, method: "get", html: { class: "form" } do %>
+ <div class="form-group col-xs-4">
+   <%= text_field_tag(:album_name, "", placeholder: "Enter album name", class: "form-control") %>
+ </div>
+ <%= submit_tag "Search", class: "btn btn-primary" %>
+<% end %>
