--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Albums#index</h1>
-<p>Find me in app/views/albums/index.html.erb</p>
+<h1 class="page-header">Albums Matching <%= params[:album_name] %></h1>
+<ul>
+ <% @albums.each do |album| %>
+   <li><%= album.name %> | <%= link_to "Show", album_path(album.id) %></li>
+ <% end %>
+</ul>
