--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>SpotifyWorldView</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= link_to 'Sign in with Spotify', '/auth/spotify' %>
   <%= csrf_meta_tags %>
 </head>
