--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,22 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+  	<nav>
    	<header class="navbar navbar-fixed-top navbar-inverse">
   	<div class="container">
-    <%= link_to "Spotify WorldView", '#', id: "logo" %>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
+  	<span class="navbar-brand">
+    	<span class="navbar-title">Album Availability on Spotify</span>
+    </span>
+      <ul class="nav navbar-form navbar-left form-inline">
       	<%= form_tag albums_path, method: "get", html: { class: "form" } do %>
- 		<div class="form-group col-xs-4">
+ 		<div class="form-group">
    			<%= text_field_tag(:album_name, "", placeholder: "Enter album name", class: "form-control") %>
  		</div>
- 		<%= submit_tag "Search", class: "btn btn-primary" %>
-        <li><%= link_to "Log in", '#' %></li>
+ 		<%= submit_tag "Search", class: "btn btn-default" %>
       </ul>
+      <u2 class="nav navbar-nav navbar-right">
+      	<li><%= link_to "Log in", '#' %></li>
+      </u2>
     </nav>
   	</div>
   	</header>
