--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,11 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
   </head>
   <body>
-  	<nav>
-   	<header class="navbar navbar-fixed-top navbar-inverse">
+  <nav>
+   <header class="navbar navbar-fixed-top navbar-inverse">
   	<div class="container">
   	<span class="navbar-brand">
     	<span class="navbar-title">Album Availability on Spotify</span>
@@ -26,10 +27,54 @@
       </u2>
     </nav>
   	</div>
-  	</header>
+   </header>
+  	  
+  	<div class="container regions">
+      <div class="row">
+        <div class="map col-md-9">
+          <div id="data-info" class="entity-info">
+            <h1 class="title"></h1>
+            <h2 class="artist"></h2>
+          </div>
+          <div id="regions-map"></div>
+        </div>
+        <div class="info col-md-3 albums-info" id="regions-info" data-active="null">
+        </div>
+      </div>
+    </div>
+
+    <div class="albums-only">
+      <h2>Only albums are supported</h2>
+    </div>
+    
   	<div class="container">
       <%= yield %>
     </div>
+    
+    <script id="template-album-info-big" type="x-tmpl-mustache">
+      <h1 class="title">{{albumTitle}}</h1>
+      <h2 class="artist">{{albumType}} by {{artistName}}</h2>
+    </script>
+
+    <script id="template-album-not-found" type="x-tmpl-mustache">
+      <div class="row alert-warning">
+        Exact match for the requested album is not available <a href="{{albumApiLink}}">{{albumUri}}</a>
+      </div>
+    </script>
+
+    <script id="template-album-not-available" type="x-tmpl-mustache">
+      <h3 class="row">Not available</h4>
+      <div class="row">
+        <p>
+        {{#markets}}
+          <span title="{{name}} ">{{code}}</span>
+        {{/markets}}
+        </p>
+      </div>
+    </script>
+    
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="https://github.com/itstheresa/spotifyWorldView/tree/master/app/assets/javascripts/sitewide/originalScript.js"></script>
   </body>
 </html>
 <% end %>
