--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Albums#show</h1>
-<p>Find me in app/views/albums/show.html.erb</p>
+<h1 class="page-header"><%= @album.name %></h1>
+   <% @album.tracks.each do |track| %>
+     <li>
+       <%= track.name %>
+     </li>
+<% end %>
+     
+<h3><%= @album.name %></h3>
+   <% @album.available_markets.each do |available_market| %>
+     <li>
+       <%= available_market %>
+     </li>
+<% end %>
