--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,17 @@
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 <h1 class="page-header">Spotify WorldView</h1>
 
 <%= form_tag albums_path, method: "get", html: { class: "form" } do %>
- <div class="form-group">
+ <div class="form-group1">
    <%= text_field_tag(:album_name, "", placeholder: "Search album by name", class: "form-control") %>
  </div>
- <%= submit_tag "Search", class: "btn btn-default" %>
+ <%= submit_tag "Search Album", class: "btn btn-default" %>
+<% end %>
+ <br></br>
+ <%= form_tag albums_path, method: "get", html: { class: "form" } do %>
+ <div class="form-group2">
+   <%= text_field_tag(:available_market, "", placeholder: "Search albums by country", class: "form-control") %>
+ </div>
+ <%= submit_tag "Search Albums Available", class: "btn btn-default" %>
+</div>
 <% end %>
