Add last file edits

--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -10,4 +10,8 @@
      <li>
        <%= available_market %>
      </li>
+	
 <% end %>
+
+<center><%= link_to "Go to Map", 'https://itstheresa.github.io/spotifyWorldView/', class: "btn btn-lg btn-default" %>
+ 	</center>
