--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,16 +2,14 @@
 <h1 class="page-header">Spotify WorldView</h1>
 
 <%= form_tag albums_path, method: "get", html: { class: "form" } do %>
- <div class="form-group1">
+ <div class="form-group col-xs-4">
    <%= text_field_tag(:album_name, "", placeholder: "Search album by name", class: "form-control") %>
  </div>
  <%= submit_tag "Search Album", class: "btn btn-default" %>
-<% end %>
  <br></br>
- <%= form_tag albums_path, method: "get", html: { class: "form" } do %>
- <div class="form-group2">
-   <%= text_field_tag(:available_market, "", placeholder: "Search albums by country", class: "form-control") %>
- </div>
- <%= submit_tag "Search Albums Available", class: "btn btn-default" %>
+ <br></br>
+ <br></br>
+    <center><%= link_to "Go to Map", 'https://itstheresa.github.io/spotifyWorldView/', class: "btn btn-lg btn-default" %>
+ </center>
 </div>
 <% end %>
