Updating certain functions and UI

--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -2,7 +2,7 @@
 <ul>
  <!--Print out list of 20 results from searching-->
  <% @albums.each do |album| %> 
-   <li><%= album.name %> by <%= album.artists %> | <%= link_to "Show tracklist & availability", album_path(album.id) %></li>
+   <li><%= album.name %> | <%= link_to "Show tracklist & availability", album_path(album.id) %></li>
    
  <% end %>
 </ul>
