--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -17,6 +17,6 @@
      
 <h3><%= @album.name %> is available in: </h3>
    <% @album.available_markets.each do |available_market| %>
-       <%= available_market + ","%>
+       <%= available_market.join(', ')%>
 	
 <% end %>
