--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
+<!--layout of the homepage of the app-->
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<h1 class="page-header">Spotify WorldView</h1>
+		<h6>Search for an album and view its availability in the world</h6>
 		<%= form_tag albums_path, method: "get", html: { class: "form" } do %>
 		<div class="form-group col-xs-4">
    		<%= text_field_tag(:album_name, "", placeholder: "Search album by name", class: "form-control") %>
