--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,11 @@
 <!--layout of the homepage of the app-->
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<h1 class="page-header">Spotify WorldView</h1>
-		<h6>Search for an album and view its availability in the world</h6>
 		<%= form_tag albums_path, method: "get", html: { class: "form" } do %>
+		<h5>Search for an album, see its tracklist, and view its availability in the world</h5>
 		<div class="form-group col-xs-4">
    		<%= text_field_tag(:album_name, "", placeholder: "Search album by name", class: "form-control") %>
  		</div>
  		<%= submit_tag "Search Album", class: "btn btn-default" %>
-
-    	<center><%= link_to "Go to Map", 'https://itstheresa.github.io/spotifyWorldView/', class: "btn btn-lg btn-default" %>
- 		</center>
  		<% end %>
 </div>
