Added log in functionality and ability to view tracklist and availability of saved albums

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,4 +8,5 @@
  		</div>
  		<%= submit_tag "Search Album", class: "btn btn-default" %>
  		<% end %>
+ 		<%= link_to 'Sign in with Spotify', '/auth/spotify' %>
 </div>
