--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,22 @@
 <!--layout of the homepage of the app-->
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<h1 class="page-header">Spotify WorldView</h1>
-		<%= form_tag albums_path, method: "get", html: { class: "form" } do %>
-		<h5>Search for an album, see its tracklist, and view its availability in the world</h5>
-		<div class="form-group col-xs-4">
-   		<%= text_field_tag(:album_name, "", placeholder: "Search album by name", class: "form-control") %>
- 		</div>
- 		<%= submit_tag "Search Album", class: "btn btn-default" %>
- 		<% end %>
- 		<%= link_to 'Sign in with Spotify', '/auth/spotify' %>
+		
+		<h5>To view an album's tracklist and availability in the world...</h5>
+		<center>
+		<!--link to log in through Spotify-->
+		<ul>
+			<h3><b><%= link_to 'Sign In With Spotify', '/auth/spotify' %> </b></h3>	
+			<h4>OR</h4>
+		</center>
+
+			<!--instructions + search bar for albums-->
+			<%= form_tag albums_path, method: "get", html: { class: "form" } do %>
+			<h5>Search for an album:</h5>
+			<div class="form-group col-xs-4">
+				<%= text_field_tag(:album_name, "", placeholder: "Search album by name", class: "form-control") %>
+			</div>
+			<%= submit_tag "Search Album", class: "btn btn-default" %>
+			<% end %>
+ 		</ul>
 </div>
