--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <!--layout of the homepage of the app-->
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<h1 class="page-header">Spotify WorldView</h1>
-		
+		<!--instructions-->
 		<h5>To view an album's tracklist and availability in the world...</h5>
 		<center>
 		<!--link to log in through Spotify-->
